# aoc

inputs/2015/: day8_example.txt
python/: base.py
python/day1/: __main__.py
python/day2/: __main__.py
python/day4/: __main__.py
rust/: Cargo.toml
rust/src/: error.rs  lib.rs  main.rs  solutions.rs
rust/src/input/: error.rs  mod.rs
rust/src/problem/: mod.rs
rust/src/solution/: aoc2015.rs  error.rs  mod.rs
rust/src/solution/aoc2015/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
rust/src/solutions/: aoc2015.rs  day1.rs  day2.rs  day3.rs  day4.rs
rust/src/solutions/aoc2015/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs
