[package]
name = "AoC"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aoc"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.65"
clap = { version="4.0.10", features= ["derive"] }
itertools = "0.10.5"
md5 = "0.7.0"
nalgebra = "0.31.2"
regex = "1.6.0"
strum = "0.24.1"
strum_macros = "0.24.3"

