[package]
name = "AoC"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aoc"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.31", features = ["derive"] }
itertools = "0.14.0"
md5 = "0.7.0"
nalgebra = "0.33.2"
regex = "1.11.1"
strum = "0.27.1"
strum_macros = "0.27.1"
