[package]
name = "AoC"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive"] }
itertools = "0.14.0"
lazy_static = "1.5.0"
md5 = "0.7.0"
nalgebra = "0.33.2"
regex = "1.11.1"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.12"
# Day9
nom = "8.0.0"
log = "0.4.26"
sha2 = "0.10.8"
hex = "0.4.3"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
